# ai-audit-trail

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  findings.md  mkdocs.yml  pyproject.toml  server.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: cli.md  compliance.md  concepts.md  index.md  integrations.md  quickstart.md
src/ai_audit/: __init__.py  buffer.py  collector.py  config.py  contracts.py  dashboard.py  hashing.py  keys.py  mcp_server.py  models.py  pii.py  provenance.py  receipt_store.py  storage.py  telemetry.py  verifier.py
src/ai_audit/integrations/: fastapi.py  langchain.py  openai.py
tests/: test_basic.py  test_buffer.py  test_chaos.py  test_improvements.py  test_integration.py  test_mcp_server.py  test_pii.py  test_provenance.py  test_report.py  test_storage.py  test_telemetry.py
