[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-audit-trail"
version = "0.4.4"
description = "Cryptographically verifiable audit trail for AI systems — Ed25519 signed, hash-chained Decision Receipts with ISO 42001 / NIST AI RMF compliance mappings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "S&S Connect", email = "sunds.connect@gmail.com" },
]
keywords = [
    "ai-audit-trail",
    "audit",
    "ai",
    "eu-ai-act",
    "compliance",
    "cryptography",
    "ed25519",
    "hash-chain",
    "decision-receipt",
    "tamper-evident",
    "iso-42001",
    "nist-ai-rmf",
    "agent-audit",
    "tool-call-audit",
    "ai-governance",
    "merkle-tree",
    "gdpr",
    "crypto-shredding",
    "provenance",
    "trace-graph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "PyNaCl>=1.5",
    "orjson>=3.9",
    "cryptography>=42.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
prometheus = ["prometheus-client>=0.19"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
langchain = ["langchain-core>=0.1"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
postgres = ["asyncpg>=0.29"]
s3 = ["boto3>=1.30"]
vault = ["hvac>=2.0"]
aws-kms = ["boto3>=1.30"]
mcp = [
    "mcp>=1.0",
]
all = [
    "redis>=5.0",
    "prometheus-client>=0.19",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "fastapi>=0.100",
    "starlette>=0.27",
    "langchain-core>=0.1",
    "openai>=1.0",
    "anthropic>=0.20",
    "asyncpg>=0.29",
    "boto3>=1.30",
    "hvac>=2.0",
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
ai-audit = "ai_audit.__main__:main"
ai-audit-mcp = "ai_audit.mcp_server:main"

[project.urls]
Homepage = "https://github.com/sundsoffice-tech/ai-audit-trail"
Repository = "https://github.com/sundsoffice-tech/ai-audit-trail"
Issues = "https://github.com/sundsoffice-tech/ai-audit-trail/issues"
Changelog = "https://github.com/sundsoffice-tech/ai-audit-trail/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_audit"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "starlette.*",
    "fastapi.*",
    "langchain_core.*",
    "openai.*",
    "anthropic.*",
    "asyncpg.*",
    "boto3.*",
    "botocore.*",
    "hvac.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
